@@ -70,6 +70,20 @@ void MLV_wait_mouse(int *x, int *y);
 /** \~french 
  *
  * \brief Suspend l'exécution jusqu'à ce que l'utilisateur clique sur le bouton
+ *        gauche de la souris.
+ *
+ * Au moment où l'utilisateur clique, la fonction retourne les
+ * coordonnées de la position de la souris dans la fenêtre.
+ *
+ * \param x Coordonnée en X de la position de la souris dans la fenêtre.
+ * \param y Coordonnée en Y de la position de la souris dans la fenêtre.
+ * \param millisecond Le nombre de milliseconde à attendre.
+ */
+int MLV_wait_mouse_or_milliseconds(int *x, int *y, int milliseconds);
+
+/** \~french 
+ *
+ * \brief Suspend l'exécution jusqu'à ce que l'utilisateur clique sur le bouton
  *        gauche de la souris où jusqu'à ce qu'un nombre de secondes, passé en 
  *        paramètres, se soient écoulées.
  *
